Fixed game stuck - hit the space

--- a/games/hit-the-space/assets/css/style.css
+++ b/games/hit-the-space/assets/css/style.css
@@ -16,7 +16,7 @@ body * {
     bottom: 1%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 9;
+    z-index: 99999;
 }
 
 #boost-button-container #boost {
